--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="menu">
 			<a href="index.html" target="_blank">HOME</a>
-			<a href="https://lict.edu.np/gallery/" target="_blank" >GALLERY</a>
+			<a href="index.pp.htm" target="_blank" >SHOP</a>
 			<a href="https://lict.edu.np/aboutus/"target="_blank">ABOUT</a>
 			<a href="loginpage.html"target="_blank">LOGIN</a>
 		</div>
